--- a/data/style.css
+++ b/data/style.css
@@ -1,3 +1,4 @@
+/* Dock Styling */
 .dock-window {
 	background: transparent;
 }
@@ -7,7 +8,6 @@
   border-radius: 22px;
 
   background: rgba(24, 24, 24, 0.9);
-	/* background: rgb(255, 255, 255); */
 }
 
 .indicator {
@@ -37,22 +37,46 @@ button.icon:active {
   /* background: rgba(238, 238, 238, 0.10); */
 }
 
+
+
+/* Searcher Styling */
 .search-window {
 	background-color: transparent;
 }
 
-.search-window box {
-	background: #222;
-	border-radius: 12px;
-	padding: 20px;
-	border: 2px solid #444;
+.search-window .search-container {
+	min-width: 680px;
+	min-height: 500px;
+	background: #181818ee;
+	border-radius: 20px;
+	padding: 15px;
+	border: 2px solid #ebdbb2;
 }
 
 .search-window entry {
-	min-height: 40px;
-	margin-bottom: 10px;
-	background: #333;
+	min-height: 50px;
+	margin: 8px 14px 4px 14px;
+	padding: 0px 14px;
+	background: #444444bb;
 	color: white;
 	border: none;
-	border-radius: 8px;
+	outline: none;
+	border-radius: 12px;
+	font-size: 20px;
+}
+
+.search-window .app-btn {
+	min-width: 100px;
+	min-height: 100px;
+	background: transparent;
+	border-radius: 12px;
+	margin: 0 4px 8px 4px;
+	outline: none;
+	border: 1px solid #44444433;
+	font-size: 16px;
+}
+
+.search-window label {
+	min-width: 50px;
+	margin-bottom: 4px;
 }
